src/test/deca/context/valid/assign-int-int.deca
// Description : 
//	 test assign int <-- int
// Resultats :
//	
//
// Historique:
//    cree le 08/01/2022
{
	int i = 1;
}