src/test/deca/context/invalid/init-boolean-int.deca
// Description : 
//	 test d'initialisation boolean <-- int
// Resultats :
//	 6:13: Non compatible assignment of expression
{
	boolean b = 1;
}